Validacoes para registrar producao
