# api/java/impl/src/main/java/br/com/senior/mydomain/myservice/repositories/peca/PecaRepositoryCustom.java
@@ -1,9 +1,10 @@
 package br.com.senior.mydomain.myservice.repositories.peca;
 
 import br.com.senior.mydomain.myservice.PecaEntity;
+import br.com.senior.mydomain.myservice.StatusPeca;
 
 import java.util.List;
 
 public interface PecaRepositoryCustom {
-    List<PecaEntity> getPecasPendentes();
+    List<PecaEntity> getPecasPendentes(StatusPeca status);
 }
