# api/java/server/src-gen/main/resources/my_domain_my_service.openapi.yaml
@@ -64,6 +64,58 @@ paths:
               schema:
                 $ref: '#/components/schemas/genericError'
   
+  /rest/my_domain/my_service/queries/getPeca:
+    post:
+      description: "Trazendo todas pecas conforme o filtro"
+      tags:
+        - Queries
+      x-senior-visibility: PRIVATE
+      security :
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - status
+              properties:
+                status:
+                  type: string
+                  allOf:
+                  - $ref: '#/components/schemas/statusPeca'
+                  description: ""
+      parameters:
+        - in: header
+          name: Accept
+          description: 'Content types and endpoint version for the request. Example: application/json;seniorx.version=2'
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  peca:
+                    type: array
+                    items:
+                      type: object
+                      allOf:
+                        - $ref: '#/components/schemas/peca'
+                    description: ""
+        401:
+          description: "Invalid Credentials"
+        default:
+          description: Error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/genericError'
+  
   /rest/my_domain/my_service/queries/exportRegistroProducao:
     post:
       description: ""
@@ -239,74 +291,6 @@ paths:
                 properties:
                   metadata:
                     type: string
-                    description: ""
-        401:
-          description: "Invalid Credentials"
-        default:
-          description: Error response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/genericError'
-  
-  /rest/my_domain/my_service/queries/getPecaPendente:
-    post:
-      description: "Trazendo todas pecas conforme o filtro"
-      tags:
-        - Queries
-      x-senior-visibility: PRIVATE
-      security :
-        - bearerAuth: []
-      parameters:
-        - in: header
-          name: Accept
-          description: 'Content types and endpoint version for the request. Example: application/json;seniorx.version=2'
-          schema:
-            type: string
-      responses:
-        200:
-          description: Ok
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  peca:
-                    type: array
-                    items:
-                      type: object
-                      allOf:
-                        - $ref: '#/components/schemas/peca'
-                    description: ""
-        401:
-          description: "Invalid Credentials"
-        default:
-          description: Error response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/genericError'
-    get:
-      description: "Trazendo todas pecas conforme o filtro"
-      tags:
-        - Queries
-      x-senior-visibility: PRIVATE
-      security :
-        - bearerAuth: []
-      responses:
-        200:
-          description: Ok
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  peca:
-                    type: array
-                    items:
-                      type: object
-                      allOf:
-                        - $ref: '#/components/schemas/peca'
                     description: ""
         401:
           description: "Invalid Credentials"
@@ -524,9 +508,12 @@ paths:
                   - retorno
                 properties:
                   retorno:
-                    type: object
-                    allOf:
-                      - $ref: '#/components/schemas/retornoRelatorio'
+                    type: array
+                    items:
+                      type: object
+                      allOf:
+                        - $ref: '#/components/schemas/retornoRelatorio'
+                      minimum: 1
                     description: ""
         401:
           description: "Invalid Credentials"
@@ -2179,7 +2166,6 @@ components:
       type: object
       required:
         - dataInicio
-        - dataFinal
       properties:
         id:
           type: string
